style.css
* {
  font-family: 'Poppins', sans-serif;
  font-style: 'normal';
}

body {
  width: auto;
  min-width: 375px;
  max-width: 768px;
  margin: 0 0 0 0;
  font-family: 'Poppins', sans-serif;
  font-style: 'normal';
  color: #344563;
  background: #fff;
}

.introduction-wrap,
.works-wrap,
.about-me-wrap,
.contact-me-container {
  width: auto;
  min-width: 375px;
  background-color: rgba(0, 0, 0, 0);
}

/*
  top-nav-bar////////
*/

.nav-flex-container {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 3%;
  padding-left: 6%;
  padding-right: 6%;
  width: auto;
}

.nav-my-logo {
  color: #6070ff;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  line-height: 20px;
  flex: 10 1 auto;
  font-size: 5vw;
  font-weight: 900;
  height: 100%;
}

.nav-menu-button {
  flex: 1 1 10%;
  background-color: rgba(0, 0, 0, 0);
  padding: auto;
}

.nav-menu-button .nav-icon-menu {
  width: 40%;
  height: 40%;
  padding-top: 5%;
}

.nav-menu-button:hover {
  filter: drop-shadow(8px 8px 10px #6070ff);
  transition: 50ms;
  transform: scale(1.1);
}

/*
  introduction text container///////
*/

.header-text {
  background-image: url('./img/header-shapes\ mobile@2x.svg');
  background-size: 100%;
  display: flex;
  flex-direction: column;
  align-items: baseline;
  padding-top: 17%;
  width: auto;
  color: #344563;
  padding-left: 6%;
  padding-right: 6%;
}

.header-text h1 {
  /* this is a flex-box */
  min-width: 327px;
  min-height: 150px;
  width: 100%;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  order: 0;
  color: #172b4d;
  margin-bottom: 1%;
}

.header-text .description {
  min-width: 327px;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-top: 1%;
  margin-bottom: 1%;
}

.lets-connect {
  min-width: 327px;
  width: auto;
  height: 10%;
  height: 24px;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  order: 2;
  margin-top: 1%;
  margin-bottom: 1%;
}

/*
    Social icon container///////
*/

.social-icon-container {
  min-width: 163px;
  width: 40%;
  display: flex;
  order: 3;
  align-items: baseline;
  justify-content: space-between;
  margin-top: 1%;
  padding-left: 0;
  list-style: none;
}

.social-icon-container a {
  flex: 1 1 1fr;
  border: 0;
  background-color: rgba(0, 0, 0, 0);
  width: fit-content;
}

.social-icon-container .social-icon {
  height: auto;
  width: 60%;
}

.social-icon-container a img:hover {
  filter: drop-shadow(8px 8px 10px #6070ff);
  transition: 50ms;
  transform: scale(1.5);
}

/*
  works section//////////
*/

.cards-container {
  display: grid;
  grid-template-rows: repeat(4, 1fr);
  margin-top: 100px;
  padding-left: 6%;
  padding-right: 6%;
  background-color: #fff;
}

.card-element {
  display: flex;
  flex-direction: column;
  border: 2px solid #dfe1e6;
  width: auto;
  height: auto;
  margin-top: 4%;
  padding-left: 4%;
  padding-right: 4%;
  padding-top: 3%;
  padding-bottom: 3%;
  border-radius: 10px;
}

.preview-picture {
  order: 0;
  margin: auto;
  justify-content: center;
  min-width: 295px;
  min-height: 220px;
  width: 100%;
}

.project-name {
  order: 1;
  margin-top: 2%;
  margin-bottom: 1%;
  min-width: 295px;
  min-height: 36px;
  color: #172b4d;
  font-weight: 700;
  font-size: 32px;
}

.project-frame {
  order: 2;
  padding-left: 0;
  margin-top: 1%;
  margin-bottom: 2%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  width: 90%;
}

.project-frame li {
  min-width: 55px;
  min-height: 16px;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.card-main-text {
  order: 3;
  color: #344563;
  margin-top: 1%;
  text-align: left;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  min-width: 295px;
  min-height: 76px;
  padding-right: 10%;
}

.technology-tags {
  order: 4;
  display: flex;
  flex-direction: row;
  width: 60%;
  padding-left: 0;
  margin-bottom: 2%;
  justify-content: space-between;
  align-items: baseline;
}

.technology-tags li {
  list-style: none;
  min-height: 16px;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  color: #6070ff;
  background-color: #ebebff;
  border-radius: 10%;
  padding-left: 4%;
  padding-right: 4%;
}

.See-project-button {
  order: 5;
  border: 1px solid #396df2;
  border-radius: 5%;
  background-color: #fff;
  color: #396df2;
  padding: 12px;
  width: 126px;
  margin-top: 8%;
}

/*
  about myself section
*/

.about-me-wrap {
  display: flex;
  flex-direction: column;
  padding-left: 6%;
  padding-right: 6%;
  padding-top: 10%;
  margin-top: 200px;
}

.about-me-wrap h2 {
  color: #172b4d;
  font-weight: 700;
  font-size: 40px;
}

.about-me-icons {
  width: 65%;
  margin-top: 4%;
}

.getResumeButton {
  order: 4;
  width: 50%;
  padding: 3%;
  border-radius: 5%;
  color: #396df2;
  border: 1px solid #396df2;
  background-color: rgba(0, 0, 0, 0);
  font-size: 100%;
}

.skill-list-container {
  order: 5;
  display: flex;
  flex-direction: column;
  margin-top: 50px;
}

.skill-list-container .skill-section {
  height: 24px;
  line-height: 24px;
  color: black;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.skill-list-container ul {
  list-style: none;
}

.skill-list-container li {
  display: flex;
  margin-top: 2%;
  margin-bottom: 2%;
  border-radius: 5px;
  align-items: center;
  padding: 2%;
  padding-left: 5%;
  padding-right: 5%;
}

.skill-list-container .skill-icon {
  flex: 1 1 auto;
}

.skill-list-container span {
  padding-left: 5%;
  flex: 9 1 auto;
  text-align: left;
}

/*
contact me section
 */

.contact-me-container {
  background-color: #6070ff;
  background-image: url(./img/form-background-contactme.png);
  background-position-x: right;
  background-repeat: no-repeat;
  background-size: 63%;
  display: flex;
  flex-direction: column;
  margin-top: 200px;
  margin-bottom: 0;
  padding-left: 6%;
  padding-right: 6%;
  padding-top: 150px;
  border-radius: 100px 0 0 0;
}

.contact-me-container p,
.contact-me-container h2 {
  color: whitesmoke;
  width: 88%;
  text-align: center;
  padding-left: auto;
  align-self: center;
  font-size: 1.5rem;
}

.contact-me-container h2 {
  font-size: 3.25rem;
  margin-bottom: 1%;
}

.contac-form {
  margin-right: 3%;
  width: 85%;
}

.contac-form input,
#get-in-touch {
  margin-top: 3%;
  margin-bottom: 3%;
  border-radius: 5px;
  padding: 2%;
  border: 0;
  color: #6070ff;
  min-width: 327px;
  width: 100%;
  align-self: center;
}

#user-message {
  min-width: 327px;
  width: 100%;
  border-radius: 5px;
  border: 0;
  padding: 2%;
}

#get-in-touch {
  min-width: 142px;
  width: fit-content;
  margin-bottom: 150px;
}

.contact-me-container li {
  list-style: none;
}

/*
hover effects
*/

button:hover {
  color: #fff;
  background-color: #6070ff;
}

#get-in-touch:hover {
  color: #fff;
  background-color: #6070ff;
}

